tests/Rules/Structure/Fixtures/valid/has_main.html.twig
<html>
<body>
<main id="main">Content</main>
</body>
</html>
